--- a/Koloda/Base.lproj/Main.storyboard
+++ b/Koloda/Base.lproj/Main.storyboard
@@ -55,55 +55,26 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gYW-p3-aUa" customClass="KolodaView" customModule="Koloda">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gYW-p3-aUa" customClass="KolodaView" customModule="Koloda">
                                 <rect key="frame" x="180" y="78" width="241" height="353"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                            </view>
-                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EMz-lH-olg">
-                                <rect key="frame" x="64" y="363" width="472" height="305"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h7d-hf-ZCf">
-                                        <rect key="frame" x="32" y="83" width="285" height="140"/>
-                                        <state key="normal" image="btn_skip_normal">
-                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                        <state key="highlighted" image="btn_skip_pressed"/>
-                                        <connections>
-                                            <action selector="leftButtonTapped" destination="vXZ-lx-hvc" eventType="touchUpInside" id="nTX-4U-eFk"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="centerY" secondItem="h7d-hf-ZCf" secondAttribute="centerY" constant="-0.5" id="xQa-T0-RvT"/>
-                                    <constraint firstAttribute="centerX" secondItem="h7d-hf-ZCf" secondAttribute="centerX" constant="61.5" id="yBk-GX-Chq"/>
+                                    <constraint firstAttribute="width" constant="241" id="Wkl-r0-Q82"/>
+                                    <constraint firstAttribute="height" constant="353" id="e6E-cw-TlO"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mnc-Dd-Z3X">
-                                <rect key="frame" x="0.0" y="20" width="600" height="64"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Un4-e1-II6">
-                                        <rect key="frame" x="547" y="8" width="45" height="45"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="45" id="KTl-ag-J8L"/>
-                                        </constraints>
-                                        <state key="normal" image="btn_undo">
-                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="undoButtonTapped" destination="vXZ-lx-hvc" eventType="touchUpInside" id="eRa-wx-0Rq"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstItem="Un4-e1-II6" firstAttribute="top" secondItem="Mnc-Dd-Z3X" secondAttribute="topMargin" id="9YZ-eP-jLz"/>
-                                    <constraint firstAttribute="bottom" secondItem="Un4-e1-II6" secondAttribute="bottom" constant="11" id="EvL-GS-v9H"/>
-                                    <constraint firstItem="Un4-e1-II6" firstAttribute="trailing" secondItem="Mnc-Dd-Z3X" secondAttribute="trailingMargin" id="qDe-cV-j8f"/>
-                                </constraints>
-                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h7d-hf-ZCf">
+                                <rect key="frame" x="188" y="439" width="118" height="96"/>
+                                <state key="normal" image="btn_skip_normal">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted" image="btn_skip_pressed"/>
+                                <connections>
+                                    <action selector="leftButtonTapped" destination="vXZ-lx-hvc" eventType="touchUpInside" id="nTX-4U-eFk"/>
+                                </connections>
+                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LAd-kH-OMn">
-                                <rect key="frame" x="315" y="468" width="95" height="96"/>
+                                <rect key="frame" x="314" y="439" width="95" height="96"/>
                                 <state key="normal" image="btn_like_normal">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -112,19 +83,25 @@
                                     <action selector="rightButtonTapped" destination="vXZ-lx-hvc" eventType="touchUpInside" id="x3n-EH-Vxz"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Un4-e1-II6">
+                                <rect key="frame" x="539" y="20" width="45" height="45"/>
+                                <state key="normal" image="btn_undo">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="undoButtonTapped" destination="vXZ-lx-hvc" eventType="touchUpInside" id="eRa-wx-0Rq"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.95294117647058818" green="0.74901960784313726" blue="0.41568627450980389" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="centerX" secondItem="EMz-lH-olg" secondAttribute="centerX" id="1ZJ-ft-28r"/>
+                            <constraint firstAttribute="centerX" secondItem="LAd-kH-OMn" secondAttribute="centerX" constant="-61.5" id="3kU-W3-9Ws"/>
                             <constraint firstAttribute="centerX" secondItem="gYW-p3-aUa" secondAttribute="centerX" constant="-0.5" id="3yS-Gs-0za"/>
-                            <constraint firstAttribute="centerX" secondItem="LAd-kH-OMn" secondAttribute="centerX" constant="-62.5" id="AKY-OA-tIb"/>
-                            <constraint firstItem="Mnc-Dd-Z3X" firstAttribute="centerX" secondItem="gYW-p3-aUa" secondAttribute="centerX" id="VxG-vn-xgA"/>
-                            <constraint firstItem="Mnc-Dd-Z3X" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="d0h-Tt-Gxl"/>
-                            <constraint firstAttribute="centerY" secondItem="LAd-kH-OMn" secondAttribute="centerY" constant="-216" id="iFW-cw-ehe"/>
-                            <constraint firstItem="Mnc-Dd-Z3X" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" id="lQ8-Sl-VcO"/>
-                            <constraint firstAttribute="centerY" secondItem="EMz-lH-olg" secondAttribute="centerY" constant="-215.5" id="sCA-sA-qqV"/>
+                            <constraint firstAttribute="centerY" secondItem="LAd-kH-OMn" secondAttribute="centerY" constant="-187" id="Xbr-Uq-hjc"/>
+                            <constraint firstAttribute="centerX" secondItem="h7d-hf-ZCf" secondAttribute="centerX" constant="53" id="Y1T-Yd-XUw"/>
+                            <constraint firstAttribute="centerY" secondItem="h7d-hf-ZCf" secondAttribute="centerY" constant="-187" id="YxA-a4-qax"/>
+                            <constraint firstItem="Un4-e1-II6" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="a7O-vB-HBu"/>
                             <constraint firstAttribute="centerY" secondItem="gYW-p3-aUa" secondAttribute="centerY" constant="45.5" id="tpN-fS-5gb"/>
-                            <constraint firstAttribute="bottom" secondItem="Mnc-Dd-Z3X" secondAttribute="bottom" constant="516" id="x1X-k0-czm"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="lUU-ie-1Kn"/>
