--- a/Koloda/Base.lproj/Main.storyboard
+++ b/Koloda/Base.lproj/Main.storyboard
@@ -71,26 +71,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h7d-hf-ZCf">
-                                <rect key="frame" x="200" y="439" width="95" height="96"/>
-                                <state key="normal" image="btn_skip_normal">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted" image="btn_skip_pressed"/>
-                                <connections>
-                                    <action selector="leftButtonTapped" destination="vXZ-lx-hvc" eventType="touchUpInside" id="nTX-4U-eFk"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LAd-kH-OMn">
-                                <rect key="frame" x="314" y="439" width="95" height="96"/>
-                                <state key="normal" image="btn_like_normal">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted" image="btn_like_pressed"/>
-                                <connections>
-                                    <action selector="rightButtonTapped" destination="vXZ-lx-hvc" eventType="touchUpInside" id="x3n-EH-Vxz"/>
-                                </connections>
-                            </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gYW-p3-aUa" customClass="KolodaView" customModule="Koloda">
                                 <rect key="frame" x="180" y="78" width="241" height="353"/>
                                 <subviews>
@@ -129,17 +109,41 @@
                                     <action selector="undoButtonTapped" destination="vXZ-lx-hvc" eventType="touchUpInside" id="eRa-wx-0Rq"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h7d-hf-ZCf">
+                                <rect key="frame" x="196" y="462" width="95" height="96"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="96" id="GJN-fc-doG"/>
+                                    <constraint firstAttribute="width" constant="95" id="s4a-Cj-VdT"/>
+                                </constraints>
+                                <state key="normal" image="btn_skip_normal">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted" image="btn_skip_pressed"/>
+                                <connections>
+                                    <action selector="leftButtonTapped" destination="vXZ-lx-hvc" eventType="touchUpInside" id="nTX-4U-eFk"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LAd-kH-OMn">
+                                <rect key="frame" x="310" y="462" width="95" height="96"/>
+                                <state key="normal" image="btn_like_normal">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted" image="btn_like_pressed"/>
+                                <connections>
+                                    <action selector="rightButtonTapped" destination="vXZ-lx-hvc" eventType="touchUpInside" id="x3n-EH-Vxz"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.95294117647058818" green="0.74901960784313726" blue="0.41568627450980389" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="centerX" secondItem="LAd-kH-OMn" secondAttribute="centerX" constant="-61.5" id="3kU-W3-9Ws"/>
                             <constraint firstAttribute="centerX" secondItem="gYW-p3-aUa" secondAttribute="centerX" constant="-0.5" id="3yS-Gs-0za"/>
+                            <constraint firstAttribute="centerX" secondItem="h7d-hf-ZCf" secondAttribute="centerX" constant="56.5" id="7b1-kq-7Dy"/>
                             <constraint firstItem="Un4-e1-II6" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="8" symbolic="YES" id="JHD-Z3-60v"/>
                             <constraint firstItem="Un4-e1-II6" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="PH6-oO-Cgc"/>
-                            <constraint firstAttribute="centerY" secondItem="LAd-kH-OMn" secondAttribute="centerY" constant="-187" id="Xbr-Uq-hjc"/>
-                            <constraint firstAttribute="centerX" secondItem="h7d-hf-ZCf" secondAttribute="centerX" constant="53" id="Y1T-Yd-XUw"/>
-                            <constraint firstAttribute="centerY" secondItem="h7d-hf-ZCf" secondAttribute="centerY" constant="-187" id="YxA-a4-qax"/>
+                            <constraint firstAttribute="centerY" secondItem="h7d-hf-ZCf" secondAttribute="centerY" constant="-210" id="QIP-Cq-7JW"/>
+                            <constraint firstAttribute="centerY" secondItem="LAd-kH-OMn" secondAttribute="centerY" constant="-210" id="ofY-OH-YzM"/>
                             <constraint firstAttribute="centerY" secondItem="gYW-p3-aUa" secondAttribute="centerY" constant="45.5" id="tpN-fS-5gb"/>
+                            <constraint firstAttribute="centerX" secondItem="LAd-kH-OMn" secondAttribute="centerX" constant="-57.5" id="zrh-B5-zFr"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="lUU-ie-1Kn"/>
